--- a/index.html
+++ b/index.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>CoolAround Page</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+    <title>Good Page</title>
 </head>
 <body>
-    <div class="cool-around-box">
-        <div class="cool-around-box__content">
+    <div class="good-box">
+        <div class="good-box__content">
             <div class="content__team__float-nav"></div>
-            <div class="content__info"></div>
+            <div class="content__info">
+                <div class="info-image"><img src="img/photo.png"></div>
+                <div class="info-title">Помогать - легко!</div>
+                <div class="info-text">
+                    <p>С весны 2015-го года «Партия еды» сотрудничает с благотворительным фондом "Открытое сердце". Этот фонд существует уже более десяти лет и помог сотням людей, попавших в трудную жизненную ситуацию.</p>
+
+                    <p>Каждый месяц мы дарим несколько десятков коробок неблагополучным многодетным семьям и людям, прошедшим реабилитацию после зависимости. Это небольшая, но важная работа. Пускай мы помогаем небольшому количеству семей, но для каждой из них это по-настоящему ценно.</p>
+
+                    <p>Делать чей-то вечер лучше, чей-то ужин вкуснее - наша специальность, так что нам только в радость.</p>
+                </div>
+                <div class="info-quote">
+                    <blockquote>
+                        <p>Отдельное спасибо сотрудникам фонда. Это инициативные и профессиональные люди, которые хорошо делают свою работу. Они сами подготовили нужные документы и организовали процесс. Благодаря таким организациям действительно можно сказать - помогать легко."</p>
+                        <div class="author">
+                            <div class="author-photo"><img src="img/person_one.png"></div>
+                            <div class="author-info">
+                                <div class="author-name">Михаил Перегудов,</div>
+                                <div class="author-prof">Основатель "Партии еды"</div>
+                            </div>
+                        </div>
+                    </blockquote>
+                </div>
+            </div>
             <div class="empty-clear"></div>
         </div>
         <div class="team__box__write-about">
